// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BundleProductOptions renders add to wish list button 1`] = `
<DocumentFragment>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Necklace
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <div
        class="bundleProduct__option"
      >
        <label>
          <input
            checked=""
            type="checkbox"
            value="1"
          />
           1 x Carmina Necklace +
          <b>
            <span
              class=""
            >
              $78.00
            </span>
          </b>
        </label>
      </div>
      <div
        class="bundleProduct__option"
      >
        <label>
          <input
            type="checkbox"
            value="2"
          />
           1 x Augusta Necklace +
          <b>
            <span
              class=""
            >
              $98.00
            </span>
          </b>
        </label>
      </div>
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Cirque Earrings
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input "
    >
      <div
        class="bundleOptionSelect__root"
      >
        <span
          class="fieldIcons__root"
        >
          <span
            class="fieldIcons__input"
          >
            <select
              class="select__input field__input bundleProduct__option"
            >
              <option
                value="3"
              >
                Gold Cirque Earrings
              </option>
              <option
                value="4"
              >
                Silver Cirque Earrings
              </option>
            </select>
          </span>
          <span
            class="fieldIcons__before"
          />
          <span
            class="fieldIcons__after"
          >
            <span
              class="icon__root"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
      <h2
        class="bundleProduct__quantityTitle"
      >
        <span>
          Quantity
        </span>
      </h2>
      <input
        class="option__quantity"
        min="1"
        type="number"
        value="1"
      />
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Sol Earrings
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <div
        class="bundleProduct__options"
      >
        <label>
          <input
            checked=""
            name="3"
            type="radio"
            value="5"
          />
           Gold Sol Earrings +
          <b>
            <span
              class=""
            >
              $48.00
            </span>
          </b>
        </label>
      </div>
      <div
        class="bundleProduct__options"
      >
        <label>
          <input
            name="3"
            type="radio"
            value="6"
          />
           Silver Sol Earrings +
          <b>
            <span
              class=""
            >
              $48.00
            </span>
          </b>
        </label>
      </div>
      <h2
        class="option__title productFullDetail__quantityTitle"
      >
        <span>
          Quantity
        </span>
      </h2>
      <input
        class="option__quantity"
        disabled=""
        min="1"
        type="number"
        value="1"
      />
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Bangles
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <select
        class="bundleProduct__option field__input"
        multiple=""
        name="4"
        size="5"
      >
        <option
          value="7"
        >
          Gold Omni Bangle Set
        </option>
        <option
          value="8"
        >
          Semper Bangle Set
        </option>
        <option
          value="9"
        >
          Silver Amor Bangle Set
        </option>
      </select>
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="summary__title"
    >
      <span
        class="required"
      >
        * Required fields
      </span>
      <span
        class="priceInfo"
      >
        Your customization: 
        <span
          class="bundlePrice"
        >
          $380.00
        </span>
      </span>
    </h3>
  </section>
  <section
    class="productFullDetail__cartActions productFullDetail__actions productFullDetail__section"
  >
    <button
      class="button__root_highPriority button__root clickable__root button__filled"
      type="button"
    >
      <span
        class="button__content"
      >
        <span>
          Add to Cart
        </span>
      </span>
    </button>
    <button
      class="button__root_normalPriority button__root clickable__root"
      type="button"
    >
      <span
        class="button__content"
      >
        <span>
          Add to Wish List
        </span>
      </span>
    </button>
  </section>
</DocumentFragment>
`;

exports[`BundleProductOptions renders the component with auto load options 1`] = `<DocumentFragment />`;

exports[`BundleProductOptions renders the component with auto load options 2`] = `
<DocumentFragment>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Necklace
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <div
        class="bundleProduct__option"
      >
        <label>
          <input
            checked=""
            type="checkbox"
            value="1"
          />
           1 x Carmina Necklace +
          <b>
            <span
              class=""
            >
              $78.00
            </span>
          </b>
        </label>
      </div>
      <div
        class="bundleProduct__option"
      >
        <label>
          <input
            type="checkbox"
            value="2"
          />
           1 x Augusta Necklace +
          <b>
            <span
              class=""
            >
              $98.00
            </span>
          </b>
        </label>
      </div>
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Cirque Earrings
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input "
    >
      <div
        class="bundleOptionSelect__root"
      >
        <span
          class="fieldIcons__root"
        >
          <span
            class="fieldIcons__input"
          >
            <select
              class="select__input field__input bundleProduct__option"
            >
              <option
                value="3"
              >
                Gold Cirque Earrings
              </option>
              <option
                value="4"
              >
                Silver Cirque Earrings
              </option>
            </select>
          </span>
          <span
            class="fieldIcons__before"
          />
          <span
            class="fieldIcons__after"
          >
            <span
              class="icon__root"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
      <h2
        class="bundleProduct__quantityTitle"
      >
        <span>
          Quantity
        </span>
      </h2>
      <input
        class="option__quantity"
        min="1"
        type="number"
        value="1"
      />
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Sol Earrings
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <div
        class="bundleProduct__options"
      >
        <label>
          <input
            checked=""
            name="3"
            type="radio"
            value="5"
          />
           Gold Sol Earrings +
          <b>
            <span
              class=""
            >
              $48.00
            </span>
          </b>
        </label>
      </div>
      <div
        class="bundleProduct__options"
      >
        <label>
          <input
            name="3"
            type="radio"
            value="6"
          />
           Silver Sol Earrings +
          <b>
            <span
              class=""
            >
              $48.00
            </span>
          </b>
        </label>
      </div>
      <h2
        class="option__title productFullDetail__quantityTitle"
      >
        <span>
          Quantity
        </span>
      </h2>
      <input
        class="option__quantity"
        disabled=""
        min="1"
        type="number"
        value="1"
      />
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Bangles
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <select
        class="bundleProduct__option field__input"
        multiple=""
        name="4"
        size="5"
      >
        <option
          value="7"
        >
          Gold Omni Bangle Set
        </option>
        <option
          value="8"
        >
          Semper Bangle Set
        </option>
        <option
          value="9"
        >
          Silver Amor Bangle Set
        </option>
      </select>
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="summary__title"
    >
      <span
        class="required"
      >
        * Required fields
      </span>
      <span
        class="priceInfo"
      >
        Your customization: 
        <span
          class="bundlePrice"
        >
          $380.00
        </span>
      </span>
    </h3>
  </section>
  <section
    class="productFullDetail__cartActions productFullDetail__actions productFullDetail__section"
  >
    <button
      class="button__root_highPriority button__root clickable__root button__filled"
      type="button"
    >
      <span
        class="button__content"
      >
        <span>
          Add to Cart
        </span>
      </span>
    </button>
  </section>
</DocumentFragment>
`;

exports[`BundleProductOptions renders the component with full options 1`] = `
<DocumentFragment>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Necklace
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <div
        class="bundleProduct__option"
      >
        <label>
          <input
            checked=""
            type="checkbox"
            value="1"
          />
           1 x Carmina Necklace +
          <b>
            <span
              class=""
            >
              $78.00
            </span>
          </b>
        </label>
      </div>
      <div
        class="bundleProduct__option"
      >
        <label>
          <input
            type="checkbox"
            value="2"
          />
           1 x Augusta Necklace +
          <b>
            <span
              class=""
            >
              $98.00
            </span>
          </b>
        </label>
      </div>
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Cirque Earrings
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input "
    >
      <div
        class="bundleOptionSelect__root"
      >
        <span
          class="fieldIcons__root"
        >
          <span
            class="fieldIcons__input"
          >
            <select
              class="select__input field__input bundleProduct__option"
            >
              <option
                value="3"
              >
                Gold Cirque Earrings
              </option>
              <option
                value="4"
              >
                Silver Cirque Earrings
              </option>
            </select>
          </span>
          <span
            class="fieldIcons__before"
          />
          <span
            class="fieldIcons__after"
          >
            <span
              class="icon__root"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
      <h2
        class="bundleProduct__quantityTitle"
      >
        <span>
          Quantity
        </span>
      </h2>
      <input
        class="option__quantity"
        min="1"
        type="number"
        value="1"
      />
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Sol Earrings
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <div
        class="bundleProduct__options"
      >
        <label>
          <input
            checked=""
            name="3"
            type="radio"
            value="5"
          />
           Gold Sol Earrings +
          <b>
            <span
              class=""
            >
              $48.00
            </span>
          </b>
        </label>
      </div>
      <div
        class="bundleProduct__options"
      >
        <label>
          <input
            name="3"
            type="radio"
            value="6"
          />
           Silver Sol Earrings +
          <b>
            <span
              class=""
            >
              $48.00
            </span>
          </b>
        </label>
      </div>
      <h2
        class="option__title productFullDetail__quantityTitle"
      >
        <span>
          Quantity
        </span>
      </h2>
      <input
        class="option__quantity"
        disabled=""
        min="1"
        type="number"
        value="1"
      />
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="option__title"
    >
      <span>
        Bangles
      </span>
       
      <span
        class="required"
      >
         *
      </span>
    </h3>
    <div
      class="option__input option__input--fixed-quantity"
    >
      <select
        class="bundleProduct__option field__input"
        multiple=""
        name="4"
        size="5"
      >
        <option
          value="7"
        >
          Gold Omni Bangle Set
        </option>
        <option
          value="8"
        >
          Semper Bangle Set
        </option>
        <option
          value="9"
        >
          Silver Amor Bangle Set
        </option>
      </select>
    </div>
  </section>
  <section
    class="productFullDetail__section productFullDetail__bundleProduct"
  >
    <h3
      class="summary__title"
    >
      <span
        class="required"
      >
        * Required fields
      </span>
      <span
        class="priceInfo"
      >
        Your customization: 
        <span
          class="bundlePrice"
        >
          $380.00
        </span>
      </span>
    </h3>
  </section>
  <section
    class="productFullDetail__quantity productFullDetail__section"
  >
    <h2
      class="productFullDetail__quantityTitle option__title"
    >
      <span>
        Quantity
      </span>
    </h2>
    <div
      class="quantity__root"
    >
      <span
        class="fieldIcons__root"
        style="--iconsBefore: 0; --iconsAfter: 1;"
      >
        <span
          class="fieldIcons__input"
        >
          <select
            aria-label="Product quantity"
            class="select__input field__input"
            name="quantity"
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
          </select>
        </span>
        <span
          class="fieldIcons__before"
        />
        <span
          class="fieldIcons__after"
        >
          <span
            class="icon__root"
          >
            <svg
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        class="message-root"
      />
    </div>
  </section>
  <section
    class="productFullDetail__cartActions productFullDetail__actions productFullDetail__section"
  >
    <button
      class="button__root_highPriority button__root clickable__root button__filled"
      type="button"
    >
      <span
        class="button__content"
      >
        <span>
          Add to Cart
        </span>
      </span>
    </button>
  </section>
</DocumentFragment>
`;

exports[`BundleProductOptions renders the component with sku 1`] = `
<DocumentFragment>
  <section
    class="productFullDetail__section productFullDetail__customizeBundle"
  >
    <button
      class="root_highPriority"
      type="button"
    >
      <span
        class="content"
      >
        <span>
          Customize
        </span>
      </span>
    </button>
  </section>
</DocumentFragment>
`;
